--- a/styles/ProjectModal.module.scss
+++ b/styles/ProjectModal.module.scss
@@ -439,17 +439,23 @@
 
 		.projectTitle {
 			display: inline-block;
-			font-size: 1.5rem;
+			font-size: 1.7rem;
+			margin-right: 1.5rem;
 		}
 
 		.projectTech {
 			margin-top: 0.8rem;
-			font-size: 1rem;
+			font-size: 1.1rem;
 		}
 		.projectSummary {
 			margin-top: 0.7rem;
 			line-height: 150%;
+			font-size: 1.15rem;
 		}
+	}
+
+	.demoBtnMobile {
+		font-size: 1.1rem;
 	}
 
 	.btnContainer {
@@ -461,6 +467,7 @@
 
 		.secondaryBtn {
 			margin-left: 1.5rem;
+			font-size: 1.12rem;
 		}
 	}
 
@@ -519,7 +526,8 @@
 		}
 		.projectSummary {
 			margin-top: 0.7rem;
-			line-height: 150%;
+			line-height: 140%;
+			font-size: 1.12rem;
 		}
 	}
 
@@ -593,7 +601,8 @@
 		}
 		.projectSummary {
 			margin-top: 0.7rem;
-			line-height: 190%;
+			line-height: 150%;
+			font-size: 1rem;
 		}
 	}
 
