--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -31,6 +31,7 @@
 	flex-direction: column;
 	margin: 0.8rem 0;
 	transition: all .2s ease-in-out;
+	cursor: pointer;
 
 	&:hover {
 		transform: scale(1.12);
