--- a/styles/ProjectModal.module.scss
+++ b/styles/ProjectModal.module.scss
@@ -229,14 +229,30 @@
 	}
 }
 
-.slide-in-anim {
-	animation: myAnim 0.5s ease 0s 1 normal forwards;
+.slide-in-right {
+	animation: slideRight 0.6s ease 0s 1 normal forwards;
 }
 
-@keyframes myAnim {
+@keyframes slideRight {
 	0% {
 		opacity: 0;
-		transform: translateX(50px);
+		transform: translateX(100px);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
+
+.slide-in-left {
+	animation: slideLeft 0.6s ease 0s 1 normal forwards;
+}
+
+@keyframes slideLeft {
+	0% {
+		opacity: 0;
+		transform: translateX(-100px);
 	}
 
 	100% {
