--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -39,7 +39,6 @@
 	margin: auto;
 	padding-top: 2.25rem;
 	padding-bottom: 4.5rem;
-
 	display: flex;
 	flex-direction: column;
 }
@@ -171,6 +170,7 @@
 	grid-area: arrow;
 	align-self: flex-end;
 	margin-bottom: 0.75rem;
+	cursor: pointer;
 }
 
 .slogan-container {
@@ -825,7 +825,7 @@
 //for phones HORIZONTAL
 @media screen and (max-width: 950px) and (max-height: 567px) {
 	.navbar {
-		margin: 0 3vw;
+		margin: 0 4vw;
 		padding: 1.5vw 0;
 
 		&__link {
@@ -839,21 +839,22 @@
 		background-repeat: no-repeat;
 		background-size: cover;
 		position: relative;
-
-		.hero__top {
-			position: absolute;
-			width: 0vw;
-			height: 0vw;
-		}
 	}
 
 	.container {
 		width: 100vw;
 		padding: 0 4vw;
+		margin: 0;
+	}
+
+	.header-container {
+		margin: 0;
 	}
 
 	.header {
 		text-align: start;
+		margin-top: 0;
+		padding-top: 0;
 	}
 
 	.accent__stick__left {
