--- a/styles/Tech.module.scss
+++ b/styles/Tech.module.scss
@@ -224,6 +224,7 @@
 //for phones HORIZONTAL
 @media screen and (max-width: 812px) and (max-height: 567px) {
 	.container {
+		padding-top: 0.5rem;
 		h2 {
 			text-align: start;
 		}
