--- a/styles/ProjectModal.module.scss
+++ b/styles/ProjectModal.module.scss
@@ -451,7 +451,7 @@
 			right: 0rem;
 			background-color: transparent;
 			border: none;
-			font-size: 2rem;
+			font-size: 2.3rem;
 			cursor: pointer;
 			color: $gray;
 
@@ -479,11 +479,13 @@
 		.projectTech {
 			margin-top: 0.8rem;
 			font-size: 1.1rem;
+			margin-right: 0;
 		}
 		.projectSummary {
 			margin-top: 0.7rem;
 			line-height: 150%;
 			font-size: 1.15rem;
+			margin-right: 0;
 		}
 	}
 
@@ -555,11 +557,13 @@
 
 		.projectTech {
 			margin-top: 0.8rem;
+			margin-right: 0;
 			font-size: 1rem;
 		}
 		.projectSummary {
 			margin-top: 0.7rem;
 			line-height: 140%;
+			margin-right: 0;
 			font-size: 1.12rem;
 		}
 	}
@@ -632,11 +636,13 @@
 
 		.projectTech {
 			margin-top: 0.5rem;
+			margin-right: 0;
 			font-size: 1rem;
 		}
 		.projectSummary {
 			margin-top: 0.5rem;
 			line-height: 150%;
+			margin-right: 0;
 			font-size: 1rem;
 		}
 	}
@@ -761,6 +767,19 @@
 	.projectImageContainer {
 		.controlsOverlay {
 			display: none;
+		}
+	}
+
+	.projectImageCarousel {
+		width: 100%;
+
+		img {
+			width: 100%;
+			height: auto;
+			min-height: 80vh;
+			border-radius: 6px;
+			display: block;
+			margin-left: auto;
 		}
 	}
 }
