message success display

--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -110,6 +110,13 @@
 	}
 }
 
+.formSuccess {
+	p {
+		font-size: 1.2rem;
+		font-weight: 500;
+	}
+}
+
 .footerContainer {
 	padding: 0.7rem;
 	text-align: center;
